# python-tailscale

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  mypi.ini  package-lock.json  package.json  pyproject.toml  sonar-project.properties
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: feature_request.yaml  issue.yaml
.github/workflows/: codeql.yaml  labels.yaml  linting.yaml  release.yaml  requirements.txt  tests.yaml  typing.yaml
examples/: devices.py  keys.py  oauth.py  policy.py
src/tailscale/: __init__.py  _cli.py  exceptions.py  models.py  storage.py  tailscale.py
src/tailscale/cli/: __init__.py  async_typer.py
tests/: __init__.py  conftest.py  storage.py  test_devices.py  test_keys.py  test_policy.py  test_tailscale.py
tests/__snapshots__/: test_tailscale.ambr
tests/cli/: __init__.py  test_cli.py
tests/cli/__snapshots__/: test_cli.ambr
tests/fixtures/: device.json  device_routes.json  devices.json  dns_nameservers.json  dns_preferences.json  dns_searchpaths.json  key.json  keys.json  split_dns.json  tailnet_settings.json  user.json  users.json
